Nội dung commit

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <div class="inner-box">
         <div class="inner-content">
           <h3>Careers</h3>
-          <h2>Join our team to create best digital solutions.</h2>
+          <h1>Join our team to create best digital solutions.</h1>
         </div>
         <div class="inner-list">
           <div class="inner-item">
@@ -415,8 +415,7 @@
               <img src="assets/images/team2.jpg" alt="Ảnh">
             </div>
             <div class="inner-text">
-              <h5>
-                Sarah Palmer</h5>
+              <h5>Sarah Palmer</h5>
               <h6>Manager</h6>
             </div>
           </div>
